[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.3.0"
wandb = "^0.8.29"
tqdm = "^4.43.0"
matplotlib = "^3.2.0"
sklearn = "^0.0"
transformers = "2.3.0"
plotly = "^4.5.3"
spacy = "^2.2.4"
termcolor = "^1.1.0"
vulture = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
